Bug 522211 - Use valueOf instead of Number constructor
Change-Id: Ic45b2ab3338b364a26c38b29b4c5adcd6de54ec9
Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>